# python-project-agent-harness

./: .gitignore  .gitlint  .pre-commit-config.yaml  .python-version  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_ZH.md  justfile  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/: api.md  commit.md  index.md
scripts/: hello.py  setup.py
src/python_harness/: main.py
src/python_harness/api/v1/: endpoints.py  router.py
src/python_harness/core/: config.py
src/python_harness/services/: base.py  health.py
src/{project}/: main.py
src/{project}/api/v1/: endpoints.py  router.py
src/{project}/core/: config.py
src/{project}/fastapi_test/: main.py
src/{project}/services/: base.py  health.py
tests/: conftest.py
tests/architecture/: __init__.py  test_layers.py
tests/e2e/: test_api.py
tests/unit/: test_main.py
